@@ -26,8 +26,11 @@ Requires: SDL >= 1.1.3
 Exult: an implementation of the Ultima VII engine for modern Operating Systems.
 
 %changelog
+* Sat Sep 9 2000  Tristan Tarrant <nadir@users.sourceforge.net>
 
-* Tue Jul 11 2000  Tristan Tarrant <tarrant_tristan@emc.com>
+- Install exult.flx in the right place
+
+* Tue Jul 11 2000  Tristan Tarrant <nadir@users.sourceforge.net>
 
 - Created the .spec file
 
@@ -37,10 +40,9 @@ Exult: an implementation of the Ultima VII engine for modern Operating Systems.
 %build
 # Needed for snapshot releases.
 if [ ! -f configure ]; then
-  CFLAGS="$RPM_OPT_FLAGS" ./autogen.sh --prefix=%prefix --sysconfdir=$RPM_BUILD_ROOT/etc
-else
-  CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%prefix --sysconfdir=$RPM_BUILD_ROOT/etc
+  ./autogen.sh
 fi
+CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%prefix --sysconfdir=$RPM_BUILD_ROOT/etc
 
 if [ "$SMP" != "" ]; then
   (make "MAKE=make -k -j $SMP"; exit 0)
@@ -56,11 +58,8 @@ make prefix=$RPM_BUILD_ROOT%{prefix} install
 %clean
 rm -rf $RPM_BUILD_ROOT
 
-%post -p /sbin/ldconfig
-
-%postun -p /sbin/ldconfig
-
 %files
 %defattr(-, root, root)
 %doc AUTHORS COPYING ChangeLog NEWS README
 %{prefix}/bin/*
+%{prefix}/share/exult/exult.flx
